# StageSelect.gd
# é—œå¡é¸æ“‡å ´æ™¯
extends Control

# ==================== å¼•ç”¨ç¯€é» ====================
@onready var stage_grid: GridContainer = $Background/MarginContainer/VBoxContainer/ScrollContainer/StageGrid
@onready var back_button: Button = $Background/MarginContainer/VBoxContainer/TopBar/BackButton
@onready var title_label: Label = $Background/MarginContainer/VBoxContainer/TopBar/TitleLabel

# ==================== é è¼‰è³‡æº ====================
const STAGE_ITEM_SCENE = preload("res://scenes/stage/StageItem.tscn")

# ==================== æ•¸æ“š ====================
var current_chapter_name: String = ""

# ==================== åˆå§‹åŒ– ====================

func _ready():
	print("ğŸ—ºï¸ StageSelect åˆå§‹åŒ–...")
	back_button.pressed.connect(_on_back_button_pressed)

	# å¾ GameManager è®€å–ç« ç¯€ä¿¡æ¯ä¸¦æ›´æ–°æ¨™é¡Œ
	update_chapter_info()
	load_stages()

func update_chapter_info():
	"""å¾ GameManager æ›´æ–°ç« ç¯€ä¿¡æ¯"""
	if GameManager.current_chapter_id != "":
		print("ğŸ“– ç•¶å‰ç« ç¯€: %s" % GameManager.current_chapter_id)
		print("ğŸ“‹ ç« ç¯€é—œå¡: %s" % str(GameManager.current_chapter_stages))

		# å¾ regions.json è®€å–ç« ç¯€åç¨±
		var file_path = "res://data/config/regions.json"
		if FileAccess.file_exists(file_path):
			var file = FileAccess.open(file_path, FileAccess.READ)
			if file != null:
				var json_text = file.get_as_text()
				file.close()

				var json = JSON.new()
				var error = json.parse(json_text)
				if error == OK:
					var data = json.get_data()
					for region in data.get("regions", []):
						if region.get("region_id") == GameManager.current_region_id:
							for chapter in region.get("chapters", []):
								if chapter.get("chapter_id") == GameManager.current_chapter_id:
									current_chapter_name = chapter.get("chapter_name", "")
									var region_icon = region.get("region_icon", "ğŸ“")
									var region_name = region.get("region_name", "")
									title_label.text = "%s %s - %s" % [region_icon, region_name, current_chapter_name]
									print("âœ… æ¨™é¡Œè¨­ç½®ç‚º: %s" % title_label.text)
									break
							break
	else:
		print("âš ï¸ æ²’æœ‰ç« ç¯€ä¿¡æ¯ï¼Œä½¿ç”¨èˆŠç‰ˆæ¨¡å¼ï¼ˆé¡¯ç¤ºæ‰€æœ‰é—œå¡ï¼‰")
		title_label.text = "é—œå¡é¸æ“‡"

# ==================== è¼‰å…¥é—œå¡ ====================

func load_stages():
	"""è¼‰å…¥ä¸¦é¡¯ç¤ºç•¶å‰ç« ç¯€çš„é—œå¡"""
	# æ¸…ç©ºç¾æœ‰é …ç›®
	for child in stage_grid.get_children():
		child.queue_free()

	# æª¢æŸ¥æ˜¯å¦æœ‰ç« ç¯€é—œå¡åˆ—è¡¨
	var stage_ids_to_load = []
	if GameManager.current_chapter_stages.size() > 0:
		# ç« ç¯€æ¨¡å¼ï¼šåªè¼‰å…¥ç•¶å‰ç« ç¯€çš„é—œå¡
		stage_ids_to_load = GameManager.current_chapter_stages
		print("ğŸ“– è¼‰å…¥ç« ç¯€é—œå¡æ•¸é‡: %d" % stage_ids_to_load.size())
	else:
		# å…¼å®¹èˆŠç‰ˆï¼šè¼‰å…¥æ‰€æœ‰é—œå¡
		stage_ids_to_load = DataManager.get_all_stages()
		print("âš ï¸ ä½¿ç”¨èˆŠç‰ˆæ¨¡å¼ï¼Œè¼‰å…¥æ‰€æœ‰é—œå¡æ•¸é‡: %d" % stage_ids_to_load.size())

	# æ’åºé—œå¡ï¼ˆæŒ‰ stage_idï¼‰
	stage_ids_to_load.sort()

	# å‰µå»ºé—œå¡é …ç›®
	for stage_id in stage_ids_to_load:
		var stage_data = DataManager.get_stage(stage_id)
		if stage_data:
			create_stage_item(stage_data)
		else:
			print("âš ï¸ æ‰¾ä¸åˆ°é—œå¡: %s" % stage_id)

func create_stage_item(stage_data: StageData):
	"""å‰µå»ºé—œå¡é …ç›®"""
	var stage_item = STAGE_ITEM_SCENE.instantiate()
	stage_grid.add_child(stage_item)
	stage_item.setup(stage_data)
	stage_item.stage_selected.connect(_on_stage_selected)

# ==================== ä¿¡è™Ÿè™•ç† ====================

func _on_stage_selected(stage_data: StageData):
	"""é—œå¡è¢«é¸ä¸­"""
	print("é¸æ“‡é—œå¡: %s - %s" % [stage_data.stage_id, stage_data.stage_name])

	# âœ… ä¿®æ”¹ï¼šä¿å­˜é¸ä¸­çš„é—œå¡åˆ° GameManager
	GameManager.selected_stage = stage_data
	
	# âœ… ä¿®æ”¹ï¼šé€²å…¥éšŠä¼é¸æ“‡ç•«é¢ï¼ˆè€Œä¸æ˜¯ç›´æ¥æˆ°é¬¥ï¼‰
	show_team_selection()

func show_team_selection():
	"""
	é¡¯ç¤ºéšŠä¼é¸æ“‡ç•«é¢ (æ–°ç‰ˆï¼šç›´æ¥è·³è½‰åˆ° TeamList)
	"""
	print("ğŸ“‹ é€²å…¥éšŠä¼åˆ—è¡¨ (é¸æ“‡æ¨¡å¼)...")
	# GameManager å·²ç¶“ä¿å­˜äº† selected_stage (åœ¨ _on_stage_selected ä¸­)
	# TeamList æœƒåœ¨ _ready() ä¸­åµæ¸¬åˆ°é€™å€‹ç‹€æ…‹ä¸¦è‡ªå‹•é€²å…¥ã€Œé¸æ“‡æ¨¡å¼ã€
	GameManager.goto_team_list()


func _on_create_new_team():
	"""æ–°å»ºéšŠä¼"""
	print("âœ¨ å‰µå»ºæ–°éšŠä¼")
	# è¨»ï¼šæˆ‘å€‘ä¸å†éœ€è¦è¨­å®š current_editing_team_id
	# GameManager.current_editing_team_id = "team_%d" % Time.get_ticks_msec()
	
# â¬‡ï¸ ========== ä¿®æ”¹é–‹å§‹ ========== â¬‡ï¸
	# ç›´æ¥å°å‘æ–°çš„éšŠä¼åˆ—è¡¨/ç·¨è¼¯ç•«é¢
	GameManager.goto_team_list()
# â¬†ï¸ ========== ä¿®æ”¹çµæŸ ========== â¬†ï¸

func start_battle():
	"""é–‹å§‹æˆ°é¬¥"""
	var stage_data = GameManager.selected_stage
	var team = GameManager.current_team
	
	if not stage_data or not team:
		show_error_dialog("ç¼ºå°‘é—œå¡æˆ–éšŠä¼è³‡æ–™ï¼")
		return
	
	print("âš”ï¸ é–‹å§‹æˆ°é¬¥: %s" % stage_data.stage_name)
	print("   éšŠä¼: %s" % team.team_name)
	
# â¬‡ï¸ ======== ä¿®æ­£é–‹å§‹ ======== â¬‡ï¸
	
	# éŒ¯èª¤çš„è·³è½‰æ–¹å¼ï¼ˆé€™æœƒå°è‡´ stage_data ä¸Ÿå¤±ï¼‰:
	# GameManager.change_scene("battle")

	# æ­£ç¢ºçš„è·³è½‰æ–¹å¼ (ä½¿ç”¨ GameManager çš„å°ˆç”¨å‡½å¼ä¾†å‚³éè³‡æ–™):
	GameManager.goto_battle(team, stage_data)
	
	# â¬†ï¸ ======== ä¿®æ­£çµæŸ ======== â¬†ï¸

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		_on_back_button_pressed()

func _on_back_button_pressed():
	"""è¿”å›ç« ç¯€é¸æ“‡æˆ–ä¸»é¸å–®"""
	if GameManager.current_chapter_id != "":
		# ç« ç¯€æ¨¡å¼ï¼šè¿”å›ç« ç¯€é¸æ“‡
		print("ğŸ”™ è¿”å›ç« ç¯€é¸æ“‡: %s" % GameManager.current_region_id)
		GameManager.goto_chapter_select(GameManager.current_region_id)
	else:
		# èˆŠç‰ˆæ¨¡å¼ï¼šè¿”å›ä¸»é¸å–®
		print("ğŸ”™ è¿”å›ä¸»é¸å–®...")
		GameManager.goto_main_menu()

# ==================== éŒ¯èª¤å°è©±æ¡† ====================

func show_error_dialog(message: String):
	"""é¡¯ç¤ºéŒ¯èª¤è¨Šæ¯"""
	print("âŒ éŒ¯èª¤: " + message)

	# å‰µå»ºè‡¨æ™‚æ¨™ç±¤é¡¯ç¤ºéŒ¯èª¤
	var error_label = Label.new()
	error_label.text = message
	error_label.add_theme_color_override("font_color", Color.RED)
	error_label.add_theme_font_size_override("font_size", 24)
	error_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	error_label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	error_label.position = Vector2(760, 490)
	error_label.size = Vector2(400, 100)
	add_child(error_label)

	# 2ç§’å¾Œç§»é™¤
	await get_tree().create_timer(2.0).timeout
	error_label.queue_free()
